--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,19 +10,10 @@
         android:id="@+id/setExact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Set Exact"
+        android:text="Set alarm"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/setRepetitive"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Set Repetitive Exact"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/setExact" />
 </androidx.constraintlayout.widget.ConstraintLayout>
